force-app/main/default/objects/Booking_Line_Item__c/Booking_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Booking Line Item</label>
    <nameField>
        <displayFormat>BLI-{0000}</displayFormat>
        <label>Booking Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>