force-app/main/default/objects/Booking_Line_Item__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <description>Actual date this service takes place (e.g., flight date, hotel check-in date).</description>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>