force-app/main/default/objects/Booking_Line_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Price per single unit of this service (e.g., price per ticket, per room-night) — used to calculate Line Total.&quot;</description>
    <label>Unit Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>