force-app/main/default/objects/Booking_Line_Item__c/fields/Units_Booked__c.field-meta.xml
<CustomField>
    <fullName>Units_Booked__c</fullName>
    <description>Number of units for this service — e.g., number of flight tickets, or number of room-nights for a hotel.</description>
    <label>Units Booked</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>