force-app/main/default/objects/Booking_Line_Item__c/fields/Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Name__c</fullName>
    <description>Name of the airline, hotel, or transfer operator this service was booked with — used for vendor-wise cost tracking and reporting.</description>
    <label>Vendor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>