force-app/main/default/objects/Booking_Line_Item__c/validationRules/Unit_Price_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_Price_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Price__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Unit_Price__c</errorDisplayField>
    <errorMessage>Unit Price must be greater than 0.</errorMessage>
</ValidationRule>